 o Applied Mike's fix for bug [1179773] jTDS fails when used with c3p0
   connection pool.
 o Applied Mike's fix for bug [1180164] NPE in TdsData with mulit-byte charset.
 o Applied Mike'd fix for bug [1180169] JDBC escapes not allowed with Sybase
   addBatch.
 o Updated FAQ listing an additional reason why a ResultSet may be downgraded
   to update only read only: not a single SELECT statement.

04/07/2005 - Alin Sinpalean
 o Applied Mike and Dave's combined fix for bug [1176221] JtdsPreparedStatement
   setTime setTimestamp Daylight DST Bug.

04/04/2005 - David Kilzer
 o Refactored duplicate code in JtdsPreparedStatement.setDate(int, Date, Calendar),
   setTime(int, Time, Calendar) and setTimestamp(int, Timestamp, Calendar) into
   adjustTimeByCalendar(long, Calendar) method in preparation to fix [1176221]
   JtdsPreparedStatement setTime setTimestamp Daylight DST Bug.

04/04/2005 - Alin Sinpalean
 o Optimized buffer allocation in RequestStream/ResponseStream.
 o Moved the Statement.getMoreResults(Statement.KEEP_CURRENT_RESULT) test to a
   different, JDBC 3.0 only unit test.

03/29/2005 - Alin Sinpalean
 o Applied a temporary (and highly useless) fix for bug [1172405] BLOB/CLOB
   position methods fail. position() methods work now, at least in theory.

03/26/2005 - Alin Sinpalean
 o Applied Mike's patch [1166594] JDBC3 Multiple open result sets. The
   getMoreResults(int) method is fully implemented and the JtdsResultSet class
   has been enhanced so that it can cache the remaining result set rows when
   required by the KEEP_CURRENT_RESULT option. Result sets returned by
   Statement.execute() are only cached by when required by the getMoreResults()
   method. A couple of minor bugs in the CachedResultSet class are also fixed;
   a where clause for updates could include text or image columns which is not
   allowed and the Sybase syntax for inserting rows containing all default
   values was incorrect.